# Computational-Intelligence

./: .gitmodules  LICENSE.md  README.md  pyproject.toml
halloween/: halloween.ipynb
hill-climbing/: set_covering.ipynb
lab10/: README.md  basic_ron.pkl  canon_ron.pkl  lab10.ipynb
lab2-nim/: README.md  lab2-nim.ipynb  lab2.issues.md
lab3/: lab3.ipynb  lab3_lib.py
lab9/: README.md  lab9.ipynb
set-covering/: set_covering.ipynb
